--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,4 +1,5 @@
 
+
 name: Upload Python Package
 
 on:
@@ -22,8 +23,8 @@ jobs:
         pip install setuptools wheel twine build
     - name: Build and publish
       env:
-        TWINE_USERNAME: ${{ env.secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ env.secrets.PYPI_PASSWORD }}
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python -m build
         twine upload dist/*
