move requirements to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,26 @@ packages =
 data_files =
     sparrow = sparrow/*
 
-[entry_points]
+[options]
+install_requires =
+    pyyaml
+    numpy
+    colour
+    pendulum
+    twine
+    cn2an
+    colorlog
+    concurrent-log-handler
+    Deprecated
+    fire
+    uvicorn>=0.16.0
+    fastapi
+
+[options.extras_require]
+dev = 
+    black
+    GitPython
+
+[options.entry_points]
 console_scripts =
     sparrow = sparrow.__main__:main
