--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -23,5 +23,6 @@ jobs:
           release_name: Release ${{ github.ref }}
           body: |
             See [CHANGELOG.md]https://github.com/beidongjiedeguang/sparrow/blob/${{ github.ref }}/CHANGELOG.md).
+          published: true
           draft: false
           prerelease: false
