--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -24,6 +24,6 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
-            See [CHANGELOG.md](https://github.com/beidongjiedeguang/sparrow/blob/${{ github.ref }}/CHANGELOG).
+            See [CHANGELOG.md](https://github.com/beidongjiedeguang/sparrow/blob/main/CHANGELOG).
           draft: false
           prerelease: false
