--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -23,3 +23,6 @@ jobs:
           release_name: Release ${{ github.ref }}
           body: |
             See [CHANGELOG.md](https://github.com/beidongjiedeguang/sparrow/blob/main/ChangeLog).
+          draft: true
+          published: true
+          prerelease: false
