--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -29,6 +29,6 @@ jobs:
           release_name: Release ${{ github.ref }}
           body: |
             See [CHANGELOG.md](https://github.com/beidongjiedeguang/sparrow/blob/main/ChangeLog).
-          draft: true
-          published: true
+          draft: false
           prerelease: false
+          published: true
