--- a/.github/workflows/gh-release.yml
+++ b/.github/workflows/gh-release.yml
@@ -29,5 +29,5 @@ jobs:
           release_name: Release ${{ github.ref }}
           body: |
             See [CHANGELOG.md](https://github.com/beidongjiedeguang/sparrow/blob/main/ChangeLog).
-          draft: false
+          draft: true
           prerelease: false
