Move requirements to .txt file

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,28 +29,36 @@ packages =
     sparrow
 data_files =
     sparrow = sparrow/*
+setup_requires =
+    pbr>=1.9
+    setuptools>=50.3.2
+    setuptools-declarative-requirements
+
 
 [options]
-install_requires =
-    pyyaml
-    numpy
-    colour
-    pendulum
-    twine
-    cn2an
-    colorlog
-    concurrent-log-handler
-    Deprecated
-    fire
-    Faker>=13.0.0
+packages = find:
+python_requires = >= 3.6
 
-[options.extras_require]
-dev = 
-    black
-    GitPython
-    uvicorn>=0.16.0
-    fastapi
-    einops
+[options.packages.find]
+exclude =
+  tests*
+
+[requirements-files]
+; setuptools does not support "file:", so use a extra package for this:
+; https://pypi.org/project/setuptools-declarative-requirements/
+; https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
+install_requires = requirements.txt
+extras_require =
+  dev = requirements-dev.txt
+
+
+;[options.extras_require]
+;dev =
+;    black
+;    GitPython
+;    uvicorn>=0.16.0
+;    fastapi
+;    einops
 
 
 [options.entry_points]
