Improve configuration file

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,11 +29,6 @@ packages =
     sparrow
 data_files =
     sparrow = sparrow/*
-setup_requires =
-    pbr>=1.9
-    setuptools>=50.3.2
-    setuptools-declarative-requirements
-
 
 [options]
 packages = find:
@@ -41,7 +36,9 @@ python_requires = >= 3.6
 
 [options.packages.find]
 exclude =
-  tests*
+    tests*
+    setup
+
 
 [requirements-files]
 ; setuptools does not support "file:", so use a extra package for this:
@@ -52,14 +49,21 @@ extras_require =
   dev = requirements-dev.txt
 
 
-;[options.extras_require]
-;dev =
-;    black
-;    GitPython
-;    uvicorn>=0.16.0
-;    fastapi
-;    einops
+[build_sphinx]
+source-dir = doc/source
+build-dir = build/sphinx/html
+all_files = 1
 
+
+[pep8]
+max-line-length = 120
+ignore = E722, E126
+exclude = migrations
+
+[pycodestyle]
+max-line-length = 120
+ignore = E722, E126
+exclude = migrations
 
 [options.entry_points]
 console_scripts =
