--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,9 @@ exclude =
 ; https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
 install_requires = requirements.txt
 extras_require =
-  dev = requirements-dev.txt
+    dev = requirements-dev.txt
+    torch = requirements-torch.txt
+    jax = requirements-jax.txt
 
 
 [build_sphinx]
