--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     timeout: marks test timeout duration
     repeat: marks that test run n times
+addopts = --doctest-modules --doctest-glob=README.md --doctest-glob=*.py --ignore=setup.py
