--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,14 +10,24 @@ on:
 jobs:
   deploy:
 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python:
+          - "3.8"
+          - "3.9"
+        platform:
+          - "linux"
+          - "macos"
+          - "windows"
+    runs-on: ${{ matrix.platform }}-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
-        python-version: '3.8'
+        python-version: ${{ matrix.python }}
+        architecture: x64
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -28,4 +38,4 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python -m build
-        twine upload dist/*
+        twine upload dist/*.whl --skip-existing
