--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,14 +28,25 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
         architecture: x64
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine build
-    - name: Build and publish
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install setuptools wheel twine build cibuildwheel==2.6.0
+    - name: Build
+      uses: pypa/cibuildwheel@v2.4.0
+      env:
+        CIBW_BUILD: ${{ matrix.python }}-${{ matrix.platform }}
+#      run: |
+#        python -m cibuildwheel --output-dir wheelhouse
+#        python -m build
+#        twine upload dist/*.whl --skip-existing
+    - name: Upload wheels
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python -m build
-        twine upload dist/*.whl --skip-existing
+        twine upload --skip-existing wheelhouse/*.whl
+    - uses: actions/upload-artifact@v3
+      with:
+        path: ./wheelhouse/*.whl
+
