--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -12,9 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        python:
-          - "3.8"
-          - "3.9"
+        python: ["cp38", "cp39", "cp310", "pp38"] #, "pp39"]
         platform:
           - "linux"
           - "macos"
@@ -26,8 +24,9 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python }}
-        architecture: x64
+        python-version: '3.x'
+#        python-version: ${{ matrix.python }}
+#        architecture: x64
 #    - name: Install dependencies
 #      run: |
 #        python -m pip install --upgrade pip
