--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -12,12 +12,17 @@ jobs:
 
     strategy:
       matrix:
-        python: ["cp38", "cp39", "cp310", "pp38"] #, "pp39"]
+        python: ["cp38", "cp39"]#, "cp310", "pp38"] #, "pp39"]
+        buildplat:
+          - [ ubuntu-20.04, manylinux_x86_64 ]
+          - [ macos-10.15, macosx_* ]
+#          - [ windows-2019, win_amd64 ]
+#          - [ windows-2019, win32 ]
         platform:
           - "linux"
           - "macos"
           - "windows"
-    runs-on: ${{ matrix.platform }}-latest
+    runs-on: ${{ matrix.buildplat[0] }}
 
     steps:
     - uses: actions/checkout@v3
@@ -34,7 +39,7 @@ jobs:
     - name: Build
       uses: pypa/cibuildwheel@v2.4.0
       env:
-        CIBW_BUILD: ${{ matrix.python }}-${{ matrix.platform }}
+        CIBW_BUILD: ${{ matrix.python }}-${{ matrix.buildplat[1] }}
 #      run: |
 #        python -m cibuildwheel --output-dir wheelhouse
 #        python -m build
@@ -46,6 +51,7 @@ jobs:
       run: |
         twine upload --skip-existing wheelhouse/*.whl
     - uses: actions/upload-artifact@v3
+      name: ${{ matrix.python }}-${{ matrix.buildplat[1] }}
       with:
         path: ./wheelhouse/*.whl
 
