--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,10 +1,16 @@
-
-
 name: Upload Python Package
 
 on:
-  release:
-    types: [push]
+  push :
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+#on:
+#  release:
+#    types: [push]
 #    types: [published]
 
 
