[Upgrade] Bump version (0.5.7 -> 0.5.8)

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ numpy
 colour
 pendulum
 twine
-cn2an
 colorlog
 concurrent-log-handler
 Deprecated
@@ -15,3 +14,4 @@ ml-collections>=0.1.1
 rich
 orjson
 ordered-set
+objprint
